<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.0-M3</version>
    <relativePath/>
  </parent>
  <groupId>com.rajatkumar.portfolio</groupId>
  <artifactId>portfolio-backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>portfolio-backend</name>
  <packaging>pom</packaging>
  <description>Backend service for my personal portfolio website</description>
  <url/>
  <licenses>
    <license/>
  </licenses>
  <developers>
    <developer/>
  </developers>
  <scm>
    <connection/>
    <developerConnection/>
    <tag/>
    <url/>
  </scm>
  <properties>
    <java.version>17</java.version>
  </properties>

  <build>
    <plugins>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>0.12.6</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>0.12.6</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>0.12.6</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>rest-web</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>rest-web-model</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>service-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>service-impl</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>outbound-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>outbound-impl</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>inbound-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>inbound-impl</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>dao</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>entity</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.rajatkumar.portfolio</groupId>
        <artifactId>libraries</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>rest-web</module>
    <module>rest-web-model</module>
    <module>service-api</module>
    <module>service-impl</module>
    <module>dao</module>
    <module>entity</module>
    <module>outbound-api</module>
    <module>outbound-impl</module>
    <module>inbound-api</module>
    <module>inbound-impl</module>
    <module>libraries</module>
  </modules>


</project>